--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.0",
+    "@babel/eslint-parser": "^7.16.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -11,7 +11,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.2",
     "@types/redux-persist": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "autoprefixer": "^10.4.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -21,18 +28,20 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "sass": "^1.48.0",
+    "tailwindcss": "2.2.19",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "yarn tailwind-build && react-scripts start",
+    "build": "yarn tailwind-build && react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier ./src/**/*.{ts,tsx} --write",
     "lint": "eslint -c .eslintrc --ext .js,.jsx,.ts,.tsx src",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "tailwind-build": "npx tailwindcss build -i src/assets/css/index.scss -o src/assets/css/main.scss"
   },
   "browserslist": {
     "production": [
@@ -47,16 +56,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.0",
-    "@types/react-redux": "^7.1.20",
-    "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "autoprefixer": "^9",
-    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
-    "postcss": "^7",
     "prettier": "2.4.1"
   },
   "lint-staged": {
