--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "dependencies": {
     "@babel/eslint-parser": "^7.16.0",
+    "@tailwindcss/cli": "^4.0.6",
+    "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "autoprefixer": "^10.4.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.47",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -21,7 +22,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
     "sass": "^1.48.0",
-    "tailwindcss": "2.2.19",
+    "tailwindcss": "^4.0.6",
     "typescript": "^4.1.2",
     "vite": "^6.1.0",
     "web-vitals": "^1.0.1"
@@ -34,7 +35,7 @@
     "prettier": "prettier ./src/**/*.{ts,tsx} --write",
     "lint": "eslint -c .eslintrc --ext .js,.jsx,.ts,.tsx src",
     "prepare": "husky install",
-    "tailwind-build": "npx tailwindcss build -i src/assets/css/index.scss -o src/assets/css/main.scss"
+    "tailwind-build": "npx @tailwindcss/cli -i src/assets/css/index.scss -o src/assets/css/main.scss"
   },
   "browserslist": {
     "production": [
