--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,7 @@
 {
-  "printWidth": 100,
+  "printWidth": 120,
   "trailingComma": "all",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": true,
-  "parser": "babel",
-  "arrowParens": "always"
+  "singleQuote": true
 }
