--- a/package.json
+++ b/package.json
@@ -3,23 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/eslint-parser": "^7.16.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/cli": "^4.0.6",
     "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
     "postcss": "^8.4.47",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.5",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.0",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.85.0",
     "tailwindcss": "^4.0.6",
     "web-vitals": "^1.0.1"
@@ -51,7 +48,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^20.14.8",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^19.0.4",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux-persist": "^4.3.1",
